echo-lb/ingress-echo-loadbalance.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-echo
  namespace: echo-lb
spec:
  parentRefs:
  - name: api-gateway
    namespace: api-gateway
  hostnames:
  - echo.maniak.lab
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo
    backendRefs:
    - kind: Service
      name: echo-1
      namespace: echo-lb
      port: 3000
      weight: 50
    - kind: Service
      name: echo-2
      namespace: echo-lb
      port: 3000
      weight: 50
---
